2010-06-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-timer.boot: Faster timing routine.

2010-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Add domains for machine precision numeric vectors and
	matrices.
	* src/algebra/numarr.spad.pamphlet: New file
	src/algebra/boo-dom1.input, src/algebra/Makefile.in: Adjust.
	src/interp/primitives.lisp: Add new primitives.

2010-06-17  Martin Baker <ax87438@martinb.com>

	* src/algebra/html.spad.pamphlet: New file
	src/algebra/boo-dom1.input, src/algebra/Makefile.in
	src/interp/setvars.boot, src/interp/setvart.boot
	src/interp/i-output.boot: Add HTML output format.

2010-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/scripts/document.in, src/interp/patches.lisp,
	src/interp/setvars.boot, src/interp/msg.boot,
	src/interp/i-output.boot, src/interp/g-boot.boot,
	src/interp/vmlisp.lisp: Misc cleanups.

2010-06-16  Martin Rubey  <martin.rubey@univie.ac.at>

	* contrib/emacs/fricas.el: correct fricas-marker-format-function
	so that startTypeTime is correctly recognized.  (tested with sbcl
	only)

	* contrib/emacs/fricas.el: also set text-properties of final bit
	when restoring history, add = as punctuation to the syntax table.

2010-06-11  Martin Rubey  <martin.rubey@univie.ac.at>

	* contrib/emacs/Makefile.in: add missing $ for auto-mode-alist.
	It should actually be \\', but I was to lazy to look up how to
	escape ' in bash.

2010-06-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ore.spad.pamphlet: Faster multiplication
	in Ore algebras.

2010-06-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/oct.spad.pamphlet,
	src/hyper/htinp.c, src/interp/comp.lisp,
	src/interp/macros.lisp, src/interp/define.boot: Minor cleanups.

2010-06-01  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/lodof.input.pamphlet: convert to unittesting facility,
	add another currently failing test

	* src/input/mantepse.input.pamphlet: remove useless computation.
