@@ -52,7 +52,6 @@ $saturnMacros := '(
   "\def\spad#1{{\em #1}}"_
   "\def\spadfun#1{{\em #1}}"_
 )
-$FormalFunctionParameterList := '(_#_#1 _#_#2 _#_#3 _#_#4 _#_#5 _#_#6 _#_#7 _#_#8 _#_#9 _#_#10 _#_#11 _#_#12 _#_#13 _#_#14 _#_#15)
 
 on() ==
   $saturn := true
