@@ -47,15 +47,12 @@
 (SETANDFILEQ /ECHO NIL) ;;"prevents echo of SPAD or BOOT code with /c"
 (MAKEPROP 'LISP '/TERMCHR '(#\  #\())
 (MAKEPROP 'LSP '/TERMCHR '(#\  #\())
-(MAKEPROP 'META '/TERMCHR '(#\:  #\())
 (MAKEPROP 'INPUT '/TERMCHR '(#\:  #\<  #\  #\())
 (MAKEPROP 'SPAD '/TERMCHR '(#\:  #\<  #\  #\())
 (MAKEPROP 'BOOT '/TERMCHR '(#\:  #\<  #\  #\())
 (MAKEPROP 'INPUT '/XCAPE #\_)
 (MAKEPROP 'BOOT '/XCAPE '#\_)
 (MAKEPROP 'SPAD '/XCAPE '#\_)
-(MAKEPROP 'META '/READFUN 'META\,RULE)
-(MAKEPROP 'META '/TRAN '/TRANSMETA)
 (MAKEPROP 'INPUT '/READFUN '|New,LEXPR,Interactive|)
 (MAKEPROP 'INPUT '/TRAN '/TRANSPAD)
 (MAKEPROP 'BOOT '/READFUN '|New,LEXPR1|)
