@@ -1,5 +1,16 @@
 2010-06-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/nrunfast.boot, src/interp/bootfuns.lisp
+	src/interp/nlib.lisp, src/interp/patches.lisp,
+	src/interp/slam.boot, src/interp/debug.lisp,
+	src/interp/br-saturn.boot, src/interp/i-syscmd.boot,
+	src/interp/comp.lisp, src/interp/pathname.boot,
+	src/interp/setq.lisp, src/interp/g-boot.boot,
+	src/interp/macros.lisp, src/interp/vmlisp.lisp:
+	Misc cleanups.
+
+2010-06-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/g-timer.boot: Faster timing routine.
 
 2010-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
